--- a/client/src/components/Products/WishlistButton.css
+++ b/client/src/components/Products/WishlistButton.css
@@ -1,5 +1,5 @@
 .fav-button-container  {
-    z-index: 20;
+    z-index: 2;
     position: absolute;
     top: 1rem;
     right: 1rem;
