--- a/client/src/components/common/GlobalCover.css
+++ b/client/src/components/common/GlobalCover.css
@@ -6,15 +6,11 @@
     background: black;
     min-height: 100vh;
     min-width: 100vw;
-    z-index: 9999;
+    z-index: 10;
     pointer-events: none;
     transition: opacity .5s ease;
 }
 
 .globalLoaded {
     opacity: 0;
-}
-
-.global-spinner path {
-   fill: linear-gradient(45deg, #35a7ff 0%, #7e54de 30%, #f40259 60%, #fea30d 100%)
 }
